<resources>
    <string name="app_name">Pickapic</string>
    <string name="welcome">Aee coroooi</string>
    <string name="facebook_app_id">182991075756565</string>
    <string name="fb_login_protocol_scheme">fb182991075756565</string>
    <string name="minhasVotacoes">Minhas votações</string>
    <string name="loginFacebook">Faça login com o facebook!</string>
    <string name="novaVotacao">Nova votação</string>
    <string name="descricao">Descrição</string>
    <string name="hint_descricao">Para qual ocasião os outros devem votar em suas fotos</string>
    <string name="inserir_foto">Inserir nova foto</string>
    <string name="concluir">Concluir</string>
    <string name="home">home</string>
</resources>
