<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lucas.pickapic.MinhasVotacoesActivity">

    <TextView
        android:id="@+id/lblMinhasVotacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/minhasVotacoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNovaVotacao"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="280dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="novaVotacao"
        android:text="@string/novaVotacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblMinhasVotacoes" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="164dp"
        android:layout_marginTop="8dp"
        android:onClick="home"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblMinhasVotacoes" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="368dp"
        android:layout_height="396dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" >
    </ListView>

</android.support.constraint.ConstraintLayout>
