<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lucas.pickapic.NovaVotacaoActivity">

    <TextView
        android:id="@+id/lblDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:hint="@string/hint_descricao"
        android:labelFor="@id/edtDescricao"
        android:text="@string/descricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtDescricao"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDescricao" />

    <ImageView
        android:id="@+id/imgNovaFoto1"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginBottom="236dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/plus"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExcluirNovaFoto1"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/com_facebook_close"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescricao" />

    <ImageView
        android:id="@+id/imgNovaFoto2"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginBottom="236dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/plus"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnExcluirNovaFoto2"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/com_facebook_close"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescricao" />

    <ImageView
        android:id="@+id/imgNovaFoto3"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/plus"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExcluirNovaFoto3"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="192dp"
        android:background="@drawable/com_facebook_close"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescricao" />

    <ImageView
        android:id="@+id/imgNovaFoto4"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/plus"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnExcluirNovaFoto4"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="192dp"
        android:background="@drawable/com_facebook_close"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescricao" />

    <Button
        android:id="@+id/btnConcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="32dp"
        android:text="@string/concluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
